@@ -1,5 +1,6 @@
 Version 2.03.17 - 
 ===============================
+  Fix lvm shell's lastlog command to report previous pre-command failures.
   Extend VDO and VDOPOOL without flushing and locking fs.
   Add --valuesonly option to lvmconfig to print only values without keys.
   Updates configure with recent autoconf tooling.
